--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -1,16 +1,18 @@
 @import './utils/fonts';
 @import './utils/variables';
-@import './components/body';
+@import './components/mobil-version/body-mobile';
+@import './components/mobil-version/\ header-mobile';
+// @import './components/body';
 @import './components/logo';
-@import './components/header';
-@import './components/hero';
-@import './components/advantages';
-@import './components/work-exemples';
-@import './components/team';
+// @import './components/header';
+@import './components/mobil-version/hero-mobile';
+@import './components/mobil-version/advantages-mobile';
+// @import './components/work-exemples';
+@import './components/mobil-version/team-mobile';
 @import './components/social-links';
-@import './components/clients';
-@import './components/footer';
-@import './components/backdrop';
-@import './components/modal';
-@import './components/portfolio-btns';
-@import './components/portfolio';
+@import './components/mobil-version/clients-mobile';
+// @import './components/footer';
+// @import './components/backdrop';
+// @import './components/modal';
+// @import './components/portfolio-btns';
+// @import './components/portfolio';
