--- a/SASS/components/_social-links.scss
+++ b/SASS/components/_social-links.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   padding-bottom: 24px;
-  justify-content: space-evenly;
+  justify-content: center;
   padding-top: 16px;
 }
 .sociallink-element {
