--- a/SASS/components/mobil-version/_advantages-mobile.scss
+++ b/SASS/components/mobil-version/_advantages-mobile.scss
@@ -9,6 +9,15 @@
   }
 
   &-section {
+    @media screen and (min-width: 480px) {
+      padding-top: 60px;
+    }
+    @media screen and (min-width: 768px) {
+      width: 768px;
+    }
+    @media screen and (min-width: 1200px) {
+      padding-top: 94px;
+    }
     padding-top: 60px;
   }
   & h3 {
