--- a/SASS/components/mobil-version/_clients-mobile.scss
+++ b/SASS/components/mobil-version/_clients-mobile.scss
@@ -1,6 +1,7 @@
 .klient-link {
   fill: $icons-color;
   border: 1px solid $icons-color;
+
   &:hover,
   &:focus {
     border: 1px solid $accent-blue-color;
@@ -11,9 +12,22 @@
 }
 .client {
   display: flex;
-  flex-wrap: wrap;
+
   justify-content: center;
-  height: 90px;
+  // height: 90px;
+  // @media screen and (min-width: 480px) {
+  //   width: calc();
+  //   flex-wrap: wrap;
+  //   flex-basis: 50%;
+  // }
+  // @media screen and (min-width: 768px) {
+  //   flex-wrap: wrap;
+  //   flex-basis: 33.3333%;
+  // }
+  // @media screen and (min-width: 1200px) {
+  //   flex-basis: 100%;
+  // }
+
   &-section {
     padding-bottom: 60px;
     padding-top: 60px;
@@ -23,15 +37,28 @@
 .element-client {
   & a {
     display: flex;
-    width: 170px;
-    height: 90px;
+    // width: 170px;
+    // height: 90px;
     border-radius: 6px;
     align-items: center;
     justify-content: center;
 
     box-sizing: border-box;
-    margin-right: 30px;
-    margin-bottom: 30px;
+    // margin-right: 30px;
+    // margin-bottom: 30px;
+
+    @media screen and (min-width: 480px) {
+      width: calc();
+      flex-wrap: wrap;
+      flex-basis: 50%;
+    }
+    @media screen and (min-width: 768px) {
+      flex-wrap: wrap;
+      flex-basis: 33.3333%;
+    }
+    @media screen and (min-width: 1200px) {
+      flex-basis: 100%;
+    }
   }
 
   &:last-child {
