--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -11,8 +11,8 @@
 @import './components/mobil-version/team-mobile';
 @import './components/social-links';
 @import './components/mobil-version/clients-mobile';
-// @import './components/footer';
-// @import './components/backdrop';
-// @import './components/modal';
+@import './components/mobil-version/footer-mobile';
+@import './components/mobil-version/backdrop-mobile';
+@import './components/mobil-version/modal-mobile';
 // @import './components/portfolio-btns';
-// @import './components/portfolio';
+@import './components/mobil-version/portfolio-mobile';
