--- a/css/main.css
+++ b/css/main.css
@@ -177,14 +177,25 @@ ul {
   padding-right: 15px;
 }
 
-@media (max-width: 480px) {
+@media screen and (min-width: 480px) {
   .container {
     width: 480px;
   }
 }
 
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+}
+
 .container-hero {
-  background-size: 480px 400px;
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.6)), to(rgba(47, 48, 58, 0.8))), url(../images/Header.jpg);
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.6), rgba(47, 48, 58, 0.8)), url(../images/Header.jpg);
   background-repeat: no-repeat;
@@ -192,19 +203,56 @@ ul {
   margin-left: auto;
 }
 
+@media screen and (min-width: 480px) {
+  .container-hero {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container-hero {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container-hero {
+    width: 1200px;
+  }
+}
+
 .hero-haeding {
   font-family: Roboto;
   font-style: normal;
   font-weight: 900;
-  font-size: 26px;
-  line-height: 42px;
-  /* or 162% */
-  text-align: center;
-  letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #ffffff;
-  padding: 30px;
-  margin: 0px;
+  letter-spacing: 0.06em;
+}
+
+@media screen and (min-width: 480px) {
+  .hero-haeding {
+    font-size: 26px;
+    line-height: 42px;
+    /* or 162% */
+    text-align: center;
+    padding: 30px;
+    margin: 0px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero-haeding {
+    min-width: 768px;
+  }
+}
+
+@media screen and (min-width: 120px) {
+  .hero-haeding {
+    font-size: 44px;
+    line-height: 60px;
+    /* or 136% */
+  }
 }
 
 .hero-section {
@@ -255,6 +303,24 @@ ul {
 
 .advantages-section {
   padding-top: 60px;
+}
+
+@media screen and (min-width: 480px) {
+  .advantages-section {
+    padding-top: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .advantages-section {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .advantages-section {
+    padding-top: 94px;
+  }
 }
 
 .advantages h3 {
@@ -444,12 +510,9 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  height: 90px;
 }
 
 .client-section {
@@ -461,8 +524,6 @@ ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 170px;
-  height: 90px;
   border-radius: 6px;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -472,8 +533,32 @@ ul {
           justify-content: center;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  margin-right: 30px;
-  margin-bottom: 30px;
+}
+
+@media screen and (min-width: 480px) {
+  .element-client a {
+    width: calc();
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .element-client a {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-preferred-size: 33.3333%;
+        flex-basis: 33.3333%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .element-client a {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
 }
 
 .element-client:last-child {
