--- a/SASS/components/mobil-version/_clients-mobile.scss
+++ b/SASS/components/mobil-version/_clients-mobile.scss
@@ -15,18 +15,18 @@
 
   justify-content: center;
   // height: 90px;
-  // @media screen and (min-width: 480px) {
-  //   width: calc();
-  //   flex-wrap: wrap;
-  //   flex-basis: 50%;
-  // }
-  // @media screen and (min-width: 768px) {
-  //   flex-wrap: wrap;
-  //   flex-basis: 33.3333%;
-  // }
-  // @media screen and (min-width: 1200px) {
-  //   flex-basis: 100%;
-  // }
+  @media screen and (min-width: 480px) {
+    width: calc();
+    flex-wrap: wrap;
+    flex-basis: 50%;
+  }
+  @media screen and (min-width: 768px) {
+    flex-wrap: wrap;
+    flex-basis: 33.3333%;
+  }
+  @media screen and (min-width: 1200px) {
+    flex-basis: 100%;
+  }
 
   &-section {
     padding-bottom: 60px;
@@ -37,8 +37,8 @@
 .element-client {
   & a {
     display: flex;
-    // width: 170px;
-    // height: 90px;
+    width: 170px;
+    height: 90px;
     border-radius: 6px;
     align-items: center;
     justify-content: center;
@@ -48,7 +48,7 @@
     // margin-bottom: 30px;
 
     @media screen and (min-width: 480px) {
-      width: calc();
+      width: 210px;
       flex-wrap: wrap;
       flex-basis: 50%;
     }
@@ -57,6 +57,7 @@
       flex-basis: 33.3333%;
     }
     @media screen and (min-width: 1200px) {
+      width: 170px;
       flex-basis: 100%;
     }
   }
