--- a/SASS/components/mobil-version/_hero-mobile.scss
+++ b/SASS/components/mobil-version/_hero-mobile.scss
@@ -1,7 +1,7 @@
 .container {
   // width: 1200px;
-  margin-right: auto;
-  margin-left: auto;
+  // margin-right: auto;
+  // margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
 
@@ -13,9 +13,12 @@
   }
   @media screen and (min-width: 1200px) {
     width: 1200px;
+    margin-right: auto;
+    margin-left: auto;
   }
 }
 .container-hero {
+  width: 100%;
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.6),
@@ -27,12 +30,15 @@
   margin-left: auto;
   @media screen and (min-width: 480px) {
     width: 480px;
+    height: 400px;
   }
   @media screen and (min-width: 768px) {
     width: 768px;
+    height: 400px;
   }
   @media screen and (min-width: 1200px) {
-    width: 1200px;
+    width: 1600px;
+    height: 600px;
   }
 }
 
@@ -40,7 +46,7 @@
   &-haeding {
     font-family: Roboto;
     font-style: normal;
-    font-weight: 900;
+    // font-weight: 900;
     text-transform: uppercase;
     color: $white-color;
     letter-spacing: 0.06em;
@@ -50,13 +56,18 @@
       line-height: 42px;
       /* or 162% */
       text-align: center;
-      padding: 30px;
-      margin: 0px;
+      padding: 0px;
+      padding-bottom: 30px;
     }
     @media screen and (min-width: 768px) {
-      min-width: 768px;
+      font-size: 26px;
+      line-height: 42px;
+      /* or 162% */
+      text-align: center;
+      padding: 0px;
+      padding-bottom: 30px;
     }
-    @media screen and (min-width: 120px) {
+    @media screen and (min-width: 1200px) {
       font-size: 44px;
       line-height: 60px;
       /* or 136% */
@@ -64,17 +75,20 @@
   }
   &-section {
     display: flex;
-
     flex-direction: column;
     text-align: center;
     align-items: center;
     margin: auto;
-
-    padding-top: 30px;
-    padding-bottom: 30px;
-    padding-left: 30px;
-    padding-right: 30px;
-    justify-content: center;
+    @media screen and (min-width: 480px) {
+      padding: 118px 60px;
+    }
+    @media screen and (min-width: 768px) {
+      padding: 118px 204px;
+    }
+    @media screen and (min-width: 1200px) {
+      padding: 200px 452px;
+      margin: 0px;
+    }
   }
 }
 .button {
