--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -13,6 +13,6 @@
 @import './components/mobil-version/clients-mobile';
 @import './components/mobil-version/footer-mobile';
 @import './components/mobil-version/backdrop-mobile';
-@import './components/mobil-version/modal-mobile';
+// @import './components/mobil-version/modal-mobile';
 // @import './components/portfolio-btns';
 @import './components/mobil-version/portfolio-mobile';
