почти сделала клиенты и преимущества

--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -7,7 +7,7 @@
 // @import './components/header';
 @import './components/mobil-version/hero-mobile';
 @import './components/mobil-version/advantages-mobile';
-// @import './components/work-exemples';
+@import './components/work-exemples';
 @import './components/mobil-version/team-mobile';
 @import './components/social-links';
 @import './components/mobil-version/clients-mobile';
