--- a/SASS/components/mobil-version/_advantages-mobile.scss
+++ b/SASS/components/mobil-version/_advantages-mobile.scss
@@ -1,4 +1,5 @@
 .advantages {
+  // display: flex;
   margin: 0px;
   border-bottom: 2px solid rgba(252, 229, 229, 0.4);
 
@@ -7,12 +8,21 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
-    flex-basis: 50%;
   }
   @media screen and (min-width: 1200px) {
     display: flex;
+    justify-content: space-evenly;
   }
-
+  & li {
+    @media screen and (min-width: 480px) {
+    }
+    @media screen and (min-width: 768px) {
+      width: calc((100% - 60px) / 2);
+    }
+    @media screen and (min-width: 1200px) {
+      width: calc((100% - 120px) / 4);
+    }
+  }
   &-heading {
     margin-top: 0px;
     margin-bottom: 0px;
@@ -45,6 +55,12 @@
     @media screen and (min-width: 480px) {
       text-align: center;
     }
+    @media screen and (min-width: 768px) {
+      text-align: start;
+    }
+    @media screen and (min-width: 1200px) {
+      text-align: start;
+    }
   }
   & p {
     font-style: normal;
@@ -53,11 +69,19 @@
     line-height: 24px;
     /* or 171% */
     letter-spacing: 0.03em;
-
     margin-bottom: 0px;
-    margin-right: 30px;
+    margin-right: 0px;
     color: $grey-text-color;
     margin-bottom: 30px;
+    @media screen and (min-width: 480px) {
+      margin-right: 0px;
+    }
+    @media screen and (min-width: 768px) {
+      margin-right: 30px;
+    }
+    @media screen and (min-width: 1200px) {
+      margin-right: 30px;
+    }
   }
   &-element {
     display: flex;
@@ -67,12 +91,15 @@
     justify-content: center;
     background-color: $secondary-background-color;
 
+    @media screen and (min-width: 480px) {
+      margin-right: 0px;
+    }
+
     @media screen and (min-width: 768px) {
-      display: block;
-      flex-basis: 50%;
+      margin-right: 30px;
     }
     @media screen and (min-width: 1200px) {
-      display: flex;
+      margin-right: 30px;
     }
   }
   &-element:last-child {
@@ -82,4 +109,9 @@
 
 .icon {
   display: block;
+}
+.examples {
+  @media screen and (max-width: 1200px) {
+    display: none;
+  }
 }
