--- a/SASS/components/mobil-version/_clients-mobile.scss
+++ b/SASS/components/mobil-version/_clients-mobile.scss
@@ -15,22 +15,35 @@
 
   justify-content: center;
   // height: 90px;
-  @media screen and (min-width: 480px) {
+  @media screen and (max-width: 768px) {
     width: calc();
     flex-wrap: wrap;
     flex-basis: 50%;
+    justify-content: space-evenly;
   }
   @media screen and (min-width: 768px) {
     flex-wrap: wrap;
     flex-basis: 33.3333%;
+    justify-content: space-evenly;
   }
   @media screen and (min-width: 1200px) {
     flex-basis: 100%;
+    justify-content: space-evenly;
   }
 
   &-section {
-    padding-bottom: 60px;
-    padding-top: 60px;
+    @media screen and (min-width: 480px) {
+      padding-top: 60px;
+      padding-bottom: 60px;
+    }
+    @media screen and (min-width: 768px) {
+      padding-top: 60px;
+      padding-bottom: 60px;
+    }
+    @media screen and (min-width: 1200px) {
+      padding-top: 94px;
+      padding-bottom: 94px;
+    }
   }
 }
 
