--- a/SASS/components/mobil-version/_hero-mobile.scss
+++ b/SASS/components/mobil-version/_hero-mobile.scss
@@ -10,6 +10,8 @@
   }
   @media screen and (min-width: 768px) {
     width: 768px;
+    margin-right: auto;
+    margin-left: auto;
   }
   @media screen and (min-width: 1200px) {
     width: 1200px;
