--- a/SASS/components/mobil-version/_team-mobile.scss
+++ b/SASS/components/mobil-version/_team-mobile.scss
@@ -1,8 +1,18 @@
 .team {
   &-section {
     background-color: $secondary-background-color;
-    padding-top: 60px;
-    padding-bottom: 60px;
+    @media screen and (min-width: 480px) {
+      padding-top: 60px;
+      padding-bottom: 60px;
+    }
+    @media screen and (min-width: 768px) {
+      padding-top: 60px;
+      padding-bottom: 60px;
+    }
+    @media screen and (min-width: 1200px) {
+      padding-top: 94px;
+      padding-bottom: 94px;
+    }
   }
   &-heading {
     font-weight: bold;
