--- a/css/main.css
+++ b/css/main.css
@@ -184,6 +184,8 @@ ul {
 @media screen and (min-width: 768px) {
   .container {
     width: 768px;
+    margin-right: auto;
+    margin-left: auto;
   }
 }
 
@@ -321,8 +323,6 @@ ul {
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
-    -ms-flex-preferred-size: 50%;
-        flex-basis: 50%;
   }
 }
 
@@ -331,6 +331,21 @@ ul {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .advantages li {
+    width: calc((100% - 60px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .advantages li {
+    width: calc((100% - 120px) / 4);
   }
 }
 
@@ -378,6 +393,18 @@ ul {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .advantages h3 {
+    text-align: start;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .advantages h3 {
+    text-align: start;
+  }
+}
+
 .advantages p {
   font-style: normal;
   font-weight: normal;
@@ -386,9 +413,27 @@ ul {
   /* or 171% */
   letter-spacing: 0.03em;
   margin-bottom: 0px;
-  margin-right: 30px;
+  margin-right: 0px;
   color: #757575;
   margin-bottom: 30px;
+}
+
+@media screen and (min-width: 480px) {
+  .advantages p {
+    margin-right: 0px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .advantages p {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .advantages p {
+    margin-right: 30px;
+  }
 }
 
 .advantages-element {
@@ -406,19 +451,21 @@ ul {
   background-color: #f5f4fa;
 }
 
+@media screen and (min-width: 480px) {
+  .advantages-element {
+    margin-right: 0px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .advantages-element {
-    display: block;
-    -ms-flex-preferred-size: 50%;
-        flex-basis: 50%;
+    margin-right: 30px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .advantages-element {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    margin-right: 30px;
   }
 }
 
@@ -430,10 +477,84 @@ ul {
   display: block;
 }
 
+@media screen and (max-width: 1200px) {
+  .examples {
+    display: none;
+  }
+}
+
+.element-list {
+  padding: 0px;
+  margin-right: 30px;
+  width: calc((100% - 60px) / 3);
+}
+
+.examples {
+  margin-top: 0px;
+  padding-bottom: 94px;
+  padding-top: 94px;
+}
+
+.examples-list {
+  position: relative;
+  padding: 0;
+  margin: 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.examples-text {
+  position: absolute;
+  bottom: 0px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
+  background: rgba(47, 48, 58, 0.8);
+  width: 370px;
+  height: 70px;
+  margin: 0px;
+  padding: 30px;
+}
+
+h2 {
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 42px;
+  letter-spacing: 0.03em;
+  text-align: center;
+  margin-bottom: 50px;
+  margin-top: 0px;
+}
+
 .team-section {
   background-color: #f5f4fa;
-  padding-top: 60px;
-  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 480px) {
+  .team-section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .team-section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .team-heading {
@@ -573,13 +694,16 @@ ul {
           justify-content: center;
 }
 
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 768px) {
   .client {
     width: calc();
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
     -ms-flex-preferred-size: 50%;
         flex-basis: 50%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
   }
 }
 
@@ -589,6 +713,9 @@ ul {
         flex-wrap: wrap;
     -ms-flex-preferred-size: 33.3333%;
         flex-basis: 33.3333%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
   }
 }
 
@@ -596,12 +723,31 @@ ul {
   .client {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
   }
 }
 
-.client-section {
-  padding-bottom: 60px;
-  padding-top: 60px;
+@media screen and (min-width: 480px) {
+  .client-section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .client-section {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .client-section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
 
 .element-client a {
