--- a/SASS/components/mobil-version/_clients-mobile.scss
+++ b/SASS/components/mobil-version/_clients-mobile.scss
@@ -15,7 +15,13 @@
 
   justify-content: center;
   // height: 90px;
-  @media screen and (max-width: 768px) {
+  // @media screen and (max-width: 768px) {
+    width: calc();
+    flex-wrap: wrap;
+    flex-basis: 50%;
+    justify-content: space-evenly;
+  }
+  @media screen and (min-width: 480px) {
     width: calc();
     flex-wrap: wrap;
     flex-basis: 50%;
