--- a/SASS/components/mobil-version/_hero-mobile.scss
+++ b/SASS/components/mobil-version/_hero-mobile.scss
@@ -1,7 +1,7 @@
 .container {
   // width: 1200px;
-  // margin-right: auto;
-  // margin-left: auto;
+  margin-right: auto;
+  margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
 
@@ -31,6 +31,10 @@
   margin-right: auto;
   margin-left: auto;
   @media screen and (min-width: 480px) {
+    width: 480px;
+    height: 400px;
+  }
+  @media screen and (max-width: 480px) {
     width: 480px;
     height: 400px;
   }
@@ -81,6 +85,9 @@
     text-align: center;
     align-items: center;
     margin: auto;
+    @media screen and (max-width: 480px) {
+      padding: 118px 60px;
+    }
     @media screen and (min-width: 480px) {
       padding: 118px 60px;
     }
