--- a/css/main.css
+++ b/css/main.css
@@ -171,6 +171,8 @@ ul {
 }
 
 .container {
+  margin-right: auto;
+  margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
 }
@@ -207,6 +209,13 @@ ul {
 }
 
 @media screen and (min-width: 480px) {
+  .container-hero {
+    width: 480px;
+    height: 400px;
+  }
+}
+
+@media screen and (max-width: 480px) {
   .container-hero {
     width: 480px;
     height: 400px;
@@ -278,6 +287,12 @@ ul {
       -ms-flex-align: center;
           align-items: center;
   margin: auto;
+}
+
+@media screen and (max-width: 480px) {
+  .hero-section {
+    padding: 118px 60px;
+  }
 }
 
 @media screen and (min-width: 480px) {
@@ -707,6 +722,19 @@ h2 {
   }
 }
 
+@media screen and (min-width: 480px) {
+  .client {
+    width: calc();
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-preferred-size: 50%;
+        flex-basis: 50%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .client {
     -ms-flex-wrap: wrap;
@@ -733,6 +761,8 @@ h2 {
   .client-section {
     padding-top: 60px;
     padding-bottom: 60px;
+    margin-right: auto;
+    margin-left: auto;
   }
 }
 
@@ -796,5 +826,181 @@ h2 {
 
 .element-client:last-child {
   margin-right: 0px;
+}
+
+.footer {
+  background: #2f303a;
+  color: #ffffff;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+.footer .logo-studio {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 26px;
+  /* identical to box height */
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+
+.footer .logo-web {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 22px;
+  line-height: 26px;
+  /* identical to box height */
+  letter-spacing: 0.03em;
+}
+
+.footer .button {
+  margin-top: 34px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media screen and (min-width: 768px) {
+  .adress-container {
+    margin-right: 165px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .adress-container {
+    margin-right: 140px;
+  }
+}
+
+.sociallink-container {
+  margin-right: 100px;
+}
+
+.contacts {
+  display: inline-block;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px;
+  /* or 171% */
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+
+.contacts > br {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px;
+  /* or 171% */
+  letter-spacing: 0.03em;
+  color: rgba(255, 255, 255, 0.4);
+}
+
+@media screen and (max-width: 768px) {
+  .contacts {
+    display: block;
+    padding-top: 20px;
+    padding-bottom: 60px;
+  }
+}
+
+.link-end {
+  width: 44px;
+  height: 44px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background-color: rgba(255, 255, 255, 0.1);
+  border-radius: 50%;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-right: 10px;
+}
+
+.link-end:hover {
+  background-color: #2196f3;
+}
+
+.link-end:hover .social {
+  fill: #ffffff;
+}
+
+.sociallink-end {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: rgba(255, 255, 255, 0.1);
+  margin-top: 16px;
+}
+
+.mailing-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media screen and (min-width: 1200px) {
+  .mailing-form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+.email {
+  width: 270px;
+  height: 50px;
+  border-radius: 4px;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  margin-right: 10px;
+  padding-left: 10px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-top: 16px;
+  background-color: #2f303a;
+  color: rgba(255, 255, 255, 0.4);
+}
+
+@media screen and (min-width: 768px) {
+  .email {
+    display: block;
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .email {
+    display: inline-block;
+  }
+}
+
+.plane {
+  margin-left: 10px;
+  fill: #ffffff;
+  background-color: #2196f3;
+}
+
+@media screen and (min-width: 768px) {
+  .additional-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
 }
 /*# sourceMappingURL=main.css.map */
