--- a/SASS/components/mobil-version/_clients-mobile.scss
+++ b/SASS/components/mobil-version/_clients-mobile.scss
@@ -15,7 +15,7 @@
 
   justify-content: center;
   // height: 90px;
-  // @media screen and (max-width: 768px) {
+  @media screen and (max-width: 768px) {
     width: calc();
     flex-wrap: wrap;
     flex-basis: 50%;
@@ -36,6 +36,7 @@
     flex-basis: 100%;
     justify-content: space-evenly;
   }
+}
 
   &-section {
     @media screen and (min-width: 480px) {
