--- a/SASS/components/mobil-version/_clients-mobile.scss
+++ b/SASS/components/mobil-version/_clients-mobile.scss
@@ -36,9 +36,12 @@
     flex-basis: 100%;
     justify-content: space-evenly;
   }
-}
 
   &-section {
+    @media screen and (max-width: 480px) {
+      padding-top: 60px;
+      padding-bottom: 60px;
+    }
     @media screen and (min-width: 480px) {
       padding-top: 60px;
       padding-bottom: 60px;
