--- a/SASS/components/_work-exemples.scss
+++ b/SASS/components/_work-exemples.scss
@@ -33,11 +33,21 @@
   }
 }
 h2 {
+  margin-left: auto;
+  margin-right: auto;
   font-weight: bold;
   font-size: 36px;
   line-height: 42px;
   letter-spacing: 0.03em;
   text-align: center;
-  margin-bottom: 50px;
+
   margin-top: 0px;
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 30px;
+  }
 }
