--- a/SASS/components/mobil-version/_advantages-mobile.scss
+++ b/SASS/components/mobil-version/_advantages-mobile.scss
@@ -8,9 +8,11 @@
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
+    // margin: -15px;
   }
   @media screen and (min-width: 1200px) {
     display: flex;
+    // margin: -15px;
     justify-content: space-evenly;
   }
   & li {
@@ -18,9 +20,11 @@
     }
     @media screen and (min-width: 768px) {
       width: calc((100% - 60px) / 2);
+      // margin: 15px;
     }
     @media screen and (min-width: 1200px) {
       width: calc((100% - 120px) / 4);
+      // margin: 15px;
     }
   }
   &-heading {
@@ -30,14 +34,11 @@
   }
 
   &-section {
-    @media screen and (min-width: 480px) {
+    @media screen and (max-width: 1200px) {
       padding-top: 60px;
       padding-bottom: 60px;
     }
-    @media screen and (min-width: 768px) {
-      padding-top: 60px;
-      padding-bottom: 60px;
-    }
+
     @media screen and (min-width: 1200px) {
       padding-top: 94px;
       padding-bottom: 94px;
@@ -52,6 +53,9 @@
     text-transform: uppercase;
     margin-top: 30px;
     margin-bottom: 10px;
+    @media screen and (max-width: 480px) {
+      text-align: center;
+    }
     @media screen and (min-width: 480px) {
       text-align: center;
     }
@@ -72,15 +76,16 @@
     margin-bottom: 0px;
     margin-right: 0px;
     color: $grey-text-color;
-    margin-bottom: 30px;
-    @media screen and (min-width: 480px) {
+
+    @media screen and (max-width: 768px) {
       margin-right: 0px;
+      margin-bottom: 30px;
     }
     @media screen and (min-width: 768px) {
-      margin-right: 30px;
+      // margin-right: 30px;
     }
     @media screen and (min-width: 1200px) {
-      margin-right: 30px;
+      // margin-right: 30px;
     }
   }
   &-element {
@@ -95,10 +100,10 @@
       margin-right: 0px;
     }
 
-    @media screen and (min-width: 768px) {
+    @media screen and (max-width: 768px) {
       margin-right: 30px;
     }
-    @media screen and (min-width: 1200px) {
+    @media screen and (max-width: 1200px) {
       margin-right: 30px;
     }
   }
