--- a/SASS/components/mobil-version/_hero-mobile.scss
+++ b/SASS/components/mobil-version/_hero-mobile.scss
@@ -1,26 +1,27 @@
 .container {
   // width: 1200px;
-  margin-right: auto;
-  margin-left: auto;
+  // margin-right: auto;
+  // margin-left: auto;
   padding-left: 15px;
   padding-right: 15px;
 
-  @media screen and (min-width: 480px) {
+  @media screen and (max-width: 480px) {
+    width: 480px;
+  }
+  @media screen and (max-width: 768px) {
     width: 480px;
   }
   @media screen and (min-width: 768px) {
     width: 768px;
-    margin-right: auto;
-    margin-left: auto;
   }
   @media screen and (min-width: 1200px) {
     width: 1200px;
-    margin-right: auto;
-    margin-left: auto;
   }
 }
 .container-hero {
-  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
+
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.6),
