--- a/SASS/components/mobil-version/_team-mobile.scss
+++ b/SASS/components/mobil-version/_team-mobile.scss
@@ -1,19 +1,14 @@
 .team {
   &-section {
     background-color: $secondary-background-color;
-    @media screen and (max-width: 480px) {
+    @media screen and (max-width: 1199px) {
       padding-top: 60px;
       padding-bottom: 60px;
     }
-    @media screen and (min-width: 480px) {
-      padding-top: 60px;
-      padding-bottom: 60px;
-    }
-    @media screen and (min-width: 768px) {
-      padding-top: 60px -15px;
-    }
+
     @media screen and (min-width: 1200px) {
-      padding-top: 94px -15px;
+      padding-top: 94px;
+      padding-bottom: 94px;
     }
   }
   &-heading {
@@ -25,28 +20,26 @@
   }
 }
 .team-list {
-  // @media screen and (min-width: 480px) {
-  //   justify-content: center;
-  // }
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: nowrap;
+    margin: -15px;
+  }
+  @media screen and (min-width: 480px) {
+  }
   // @media screen and (max-width: 768px) {
-  //   justify-content: center;
+  //
   // }
-  // @media screen and (max-width: 1200px) {
-  //   display: flex;
-  //   flex-direction: row;
-  //   flex-wrap: wrap;
-  //   flex-basis: 50%;
-  // }
-  // @media screen and (min-width: 768px) {
-  //   display: flex;
-  //   flex-direction: row;
-  //   flex-wrap: wrap;
-  //   flex-basis: 50%;
-  //   // justify-content: space-evenly;
-  // }
+
+  //
+
   // @media screen and (min-width: 1200px) {
   //   display: flex;
-  // justify-content: space-evenly;
 
   // @media screen and (min-width: 1200px) {
 
@@ -62,11 +55,29 @@
     border-top-left-radius: inherit;
     border-top-right-radius: inherit;
     margin-bottom: 30px;
+    @media screen and (max-width: 480px) {
+      display: block;
+    }
+    @media screen and (min-width: 768px) {
+      width: calc((100% - 60px) / 2);
+      margin: 15px;
+    }
+    @media screen and (min-width: 1200px) {
+      width: calc((100%-105px) / 4);
+      // justify-content: space-evenly;
+      margin: 15px;
+    }
+
+    &:not(:last-child) {
+      @media screen and (max-width: 767px) {
+        margin-bottom: 30px;
+      }
+    }
+    &:last-child {
+      margin-right: 0;
+    }
   }
-  // @media screen and (max-width: 480px) {
-  //   width: 100%;
-  //   display: block;
-  // }
+
   // @media screen and (max-width: 768px) {
   //   display: block;
   // }
@@ -83,16 +94,9 @@
   //   flex-basis: 50%;
   //   // justify-content: space-evenly;
   // }
-  // @media screen and (min-width: 1200px) {
-  //   width: calc((100%-150) / 4);
-  //   // justify-content: space-evenly;
-
-  //   margin-right: 15px;
-  //   margin-left: 15px;
-  // }
 
   &-person:last-child {
-    margin-right: 0px;
+    margin-right: px;
   }
 }
 .name {
