--- a/SASS/components/mobil-version/_advantages-mobile.scss
+++ b/SASS/components/mobil-version/_advantages-mobile.scss
@@ -1,10 +1,7 @@
 .advantages {
   // display: flex;
   margin: 0px;
-  border-bottom: 2px solid rgba(252, 229, 229, 0.4);
 
-  // @media screen and (min-width: 480px) {
-  // }
   @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
@@ -73,7 +70,7 @@
     line-height: 24px;
     /* or 171% */
     letter-spacing: 0.03em;
-    margin-bottom: 0px;
+
     margin-right: 0px;
     color: $grey-text-color;
 
@@ -82,11 +79,11 @@
       margin-bottom: 30px;
     }
     @media screen and (min-width: 768px) {
-      // margin-right: 30px;
+      margin-bottom: 0px;
     }
-    @media screen and (min-width: 1200px) {
-      // margin-right: 30px;
-    }
+    // @media screen and (min-width: 1200px) {
+    //   // margin-right: 30px;
+    // }
   }
   &-element {
     display: flex;
