--- a/SASS/components/mobil-version/_hero-mobile.scss
+++ b/SASS/components/mobil-version/_hero-mobile.scss
@@ -21,7 +21,8 @@
 .container-hero {
   margin-right: auto;
   margin-left: auto;
-
+  background-position: center;
+  align-items: center;
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.6),
@@ -29,8 +30,8 @@
     ),
     url(../images/Header.jpg);
   background-repeat: no-repeat;
-  margin-right: auto;
-  margin-left: auto;
+  max-width: 1600px;
+  min-height: 400px;
   @media screen and (min-width: 480px) {
     width: 480px;
     height: 400px;
