--- a/SASS/components/mobil-version/_hero-mobile.scss
+++ b/SASS/components/mobil-version/_hero-mobile.scss
@@ -5,10 +5,7 @@
   padding-left: 15px;
   padding-right: 15px;
 
-  @media screen and (max-width: 480px) {
-    width: 480px;
-  }
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 767px) {
     width: 480px;
   }
   @media screen and (min-width: 768px) {
@@ -18,9 +15,14 @@
     width: 1200px;
   }
 }
-.container-hero {
+.hero-section {
   margin-right: auto;
   margin-left: auto;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+
   background-position: center;
   align-items: center;
   background-image: linear-gradient(
@@ -30,28 +32,31 @@
     ),
     url(../images/Header.jpg);
   background-repeat: no-repeat;
+
   max-width: 1600px;
   min-height: 400px;
-  @media screen and (min-width: 480px) {
-    width: 480px;
-    height: 400px;
-  }
-  @media screen and (max-width: 480px) {
-    width: 480px;
+
+  @media screen and (max-width: 767px) {
+    max-width: 480px;
+    padding: 118px 60px;
     height: 400px;
   }
   @media screen and (min-width: 768px) {
-    width: 768px;
+    max-width: 768px;
+    padding: 118px 204px;
     height: 400px;
   }
   @media screen and (min-width: 1200px) {
-    width: 1600px;
+    max-width: 1600px;
     height: 600px;
+    padding: 200px 300px;
   }
 }
 
 .hero {
   &-haeding {
+    margin-bottom: 30px;
+    padding-bottom: 0px;
     font-family: Roboto;
     font-style: normal;
     // font-weight: 900;
@@ -64,16 +69,12 @@
       line-height: 42px;
       /* or 162% */
       text-align: center;
-      padding: 0px;
-      padding-bottom: 30px;
     }
     @media screen and (min-width: 768px) {
       font-size: 26px;
       line-height: 42px;
       /* or 162% */
       text-align: center;
-      padding: 0px;
-      padding-bottom: 30px;
     }
     @media screen and (min-width: 1200px) {
       font-size: 44px;
@@ -81,27 +82,28 @@
       /* or 136% */
     }
   }
-  &-section {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-    margin: auto;
-    @media screen and (max-width: 480px) {
-      padding: 118px 60px;
-    }
-    @media screen and (min-width: 480px) {
-      padding: 118px 60px;
-    }
-    @media screen and (min-width: 768px) {
-      padding: 118px 204px;
-    }
-    @media screen and (min-width: 1200px) {
-      padding: 200px 452px;
-      margin: 0px;
-    }
-  }
 }
+// &-section {
+//   display: flex;
+//   flex-direction: column;
+//   text-align: center;
+//   align-items: center;
+//   margin: auto;
+//   @media screen and (max-width: 480px) {
+//     padding: 118px 60px;
+//   }
+//   @media screen and (min-width: 480px) {
+//     padding: 118px 60px;
+//   }
+//   @media screen and (min-width: 768px) {
+//     padding: 118px 204px;
+//   }
+//   @media screen and (min-width: 1200px) {
+//     padding: 200px 452px;
+//     margin: 0px;
+//   }
+// }
+
 .button {
   display: inline-block;
   background-color: $accent-blue-color;
