--- a/SASS/main.scss
+++ b/SASS/main.scss
@@ -1,7 +1,7 @@
 @import './utils/fonts';
 @import './utils/variables';
 @import './components/mobil-version/body-mobile';
-@import './components/mobil-version/header-mobile';
+@import './components/mobil-version/\ header-mobile';
 // @import './components/body';
 @import './components/logo';
 // @import './components/header';
@@ -12,7 +12,7 @@
 @import './components/social-links';
 @import './components/mobil-version/clients-mobile';
 @import './components/mobil-version/footer-mobile';
-@import './components/backdrop';
-@import './components/modal';
+// @import './components/backdrop';
+// @import './components/modal';
 // @import './components/portfolio-btns';
 @import './components/mobil-version/portfolio-mobile';
