--- a/SASS/components/_logo.scss
+++ b/SASS/components/_logo.scss
@@ -3,6 +3,10 @@
   padding-top: 24px;
   padding-bottom: 25px;
   margin-right: 85px;
+  @media screen and (min-width: 768px) {
+    margin-right: 0px;
+    text-align: start;
+  }
 
   &-web {
     font-family: Raleway;
