--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&family=Roboto:wght@400;700&display=swap");
 html {
@@ -29,7 +28,34 @@ ul {
   margin: 0px;
 }
 
-@media screen and (min-width: 767px) {
+.menu-button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .header-site .container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+@media screen and (min-width: 768px) {
   .header-site .container {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -63,6 +89,15 @@ ul {
         -ms-flex-pack: center;
             justify-content: center;
   }
+}
+
+@media screen and (min-width: 768px) and (max-width: 767px) {
+  .nav {
+    margin-bottom: 60px;
+  }
+}
+
+@media screen and (min-width: 768px) {
   .site-nav {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -73,6 +108,69 @@ ul {
 @media screen and (max-width: 767px) {
   .site-nav {
     display: inline;
+  }
+  .header-site {
+    position: relative;
+  }
+}
+
+.menu-button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+}
+
+.menu-button .icon-cross {
+  display: none;
+}
+
+.menu-button.is-open .icon-cross {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
+.menu-container {
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  background-color: #fff;
+}
+
+@media screen and (max-width: 767px) {
+  .menu-container {
+    display: none;
+    position: absolute;
+    top: 101%;
+    left: 0;
+    width: 100%;
+    z-index: 9;
+    min-height: 393px;
+    padding: 60px 0 60px 0;
+    -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 4px 8px rgba(0, 0, 0, 0.04);
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.16), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 4px 8px rgba(0, 0, 0, 0.04);
+  }
+  .menu-container .is-open {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .menu-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
   }
 }
 
@@ -159,6 +257,14 @@ ul {
   color: #2196f3;
 }
 
+@media screen and (min-width: 1200px) {
+  .adress-nav {
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+  }
+}
+
 .current {
   color: #2196f3;
 }
@@ -175,14 +281,23 @@ ul {
   background-color: #2196f3;
 }
 
-.mail :hover,
+.mails:hover,
 .fone :hover {
   fill: #2196f3;
 }
 
-.mail,
+.mails,
 .fone {
   fill: #757575;
+  display: inline;
+}
+
+@media screen and (min-width: 1200px) {
+  .mails,
+  .fone {
+    margin-right: 15px;
+    margin-left: 15px;
+  }
 }
 
 .logo {
@@ -190,6 +305,13 @@ ul {
   padding-top: 24px;
   padding-bottom: 25px;
   margin-right: 85px;
+}
+
+@media screen and (min-width: 768px) {
+  .logo {
+    margin-right: 0px;
+    text-align: start;
+  }
 }
 
 .logo-web {
@@ -224,13 +346,7 @@ ul {
   padding-right: 15px;
 }
 
-@media screen and (max-width: 480px) {
-  .container {
-    width: 480px;
-  }
-}
-
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
   .container {
     width: 480px;
   }
@@ -248,13 +364,22 @@ ul {
   }
 }
 
-.container-hero {
+.hero-section {
   margin-right: auto;
   margin-left: auto;
-  background-position: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  background-position: center;
+  align-items: center;
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.6)), to(rgba(47, 48, 58, 0.8))), url(../images/Header.jpg);
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.6), rgba(47, 48, 58, 0.8)), url(../images/Header.jpg);
   background-repeat: no-repeat;
@@ -262,35 +387,33 @@ ul {
   min-height: 400px;
 }
 
-@media screen and (min-width: 480px) {
-  .container-hero {
-    width: 480px;
-    height: 400px;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  .container-hero {
-    width: 480px;
+@media screen and (max-width: 767px) {
+  .hero-section {
+    max-width: 480px;
+    padding: 118px 60px;
     height: 400px;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .container-hero {
-    width: 768px;
+  .hero-section {
+    max-width: 768px;
+    padding: 118px 204px;
     height: 400px;
   }
 }
 
 @media screen and (min-width: 1200px) {
-  .container-hero {
-    width: 1600px;
+  .hero-section {
+    max-width: 1600px;
     height: 600px;
+    padding: 200px 300px;
   }
 }
 
 .hero-haeding {
+  margin-bottom: 30px;
+  padding-bottom: 0px;
   font-family: Roboto;
   font-style: normal;
   text-transform: uppercase;
@@ -304,8 +427,6 @@ ul {
     line-height: 42px;
     /* or 162% */
     text-align: center;
-    padding: 0px;
-    padding-bottom: 30px;
   }
 }
 
@@ -315,8 +436,6 @@ ul {
     line-height: 42px;
     /* or 162% */
     text-align: center;
-    padding: 0px;
-    padding-bottom: 30px;
   }
 }
 
@@ -325,46 +444,6 @@ ul {
     font-size: 44px;
     line-height: 60px;
     /* or 136% */
-  }
-}
-
-.hero-section {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  text-align: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin: auto;
-}
-
-@media screen and (max-width: 480px) {
-  .hero-section {
-    padding: 118px 60px;
-  }
-}
-
-@media screen and (min-width: 480px) {
-  .hero-section {
-    padding: 118px 60px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .hero-section {
-    padding: 118px 204px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .hero-section {
-    padding: 200px 452px;
-    margin: 0px;
   }
 }
 
@@ -1158,309 +1237,6 @@ h2 {
         -ms-flex-pack: space-evenly;
             justify-content: space-evenly;
   }
-}
-
-.backdrop .is-hidden {
-  opacity: 0;
-  pointer-events: none;
-  -webkit-transform: scale(1.08);
-          transform: scale(1.08);
-}
-
-.backdrop {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.2);
-  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
-.modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 528px;
-  height: 581px;
-  background-color: #ffffff;
-  opacity: 1;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
-
-.comment {
-  position: absolute;
-  top: 12px;
-  left: 16px;
-  -webkit-transform: translateY(-30%);
-          transform: translateY(-30%);
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.01em;
-  color: #757575;
-  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-textarea {
-  resize: none;
-  height: 120px;
-  width: 100%;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  border-radius: 4px;
-  padding: 12px 42px 12px;
-}
-
-.form {
-  min-width: 528px;
-  height: 580px;
-  outline: 1px solid #757575;
-  margin-left: auto;
-  margin-right: auto;
-  background-color: #ffffff;
-  position: relative;
-  padding: 40px;
-  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  top: 50%;
-  left: 50%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-}
-
-.form-header {
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 23px;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: #121121;
-  margin-bottom: 30px;
-}
-
-.form-label {
-  position: absolute;
-  top: 16px;
-  left: 42px;
-  font-weight: 200;
-  font-size: 14px;
-  line-height: 16px;
-  line-height: 1.14;
-  letter-spacing: 0.01em;
-  color: #757575;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.form-input {
-  width: 100%;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  border-radius: 4px;
-  padding: 12px 42px 12px;
-}
-
-.form-field {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin-bottom: 28px;
-  width: 448px;
-  margin-left: auto;
-  margin-right: auto;
-  /* Анимация лейблов */
-}
-
-.form-field:focus-within > .form-input {
-  border: 1px solid #2196f3;
-  outline: none;
-  -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.form-field:focus-within > .form-label,
-.form-field:focus-within > .comment {
-  color: #2196f3;
-  -webkit-transform: translate(-16px, -42px);
-          transform: translate(-16px, -42px);
-  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.button {
-  display: inline-block;
-  border: none;
-}
-
-.form-field:focus-within > .icon {
-  fill: #2196f3;
-}
-
-.form-input:not(:placeholder-shown) ~ .form-label {
-  -webkit-transform: translate(-16px, -42px);
-          transform: translate(-16px, -42px);
-}
-
-.textarea:not(:placeholder-shown) ~ .comment {
-  -webkit-transform: translate(-16px, -42px);
-          transform: translate(-16px, -42px);
-}
-
-.btn {
-  width: 200px;
-  -webkit-transform: translateX(50%);
-          transform: translateX(50%);
-  outline: none;
-}
-
-.icon-form {
-  position: absolute;
-  top: 50%;
-  left: 10px;
-  -webkit-transform: translateY(-50%);
-          transform: translateY(-50%);
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  background-color: #ffffff;
-}
-
-.icon-check {
-  left: 0;
-  bottom: 0;
-  position: absolute;
-  opacity: 0;
-  display: block;
-  width: 15px;
-  height: 15px;
-  border: 1px solid #2196f3;
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 2px;
-  margin-right: 8px;
-  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.check {
-  position: relative;
-  display: block;
-  width: 15px;
-  height: 15px;
-  border: 1px solid #000000;
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 2px;
-  margin-right: 8px;
-  -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.close-button {
-  position: absolute;
-  top: 0px;
-  right: 0px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 30px;
-  height: 30px;
-  background-color: #ffffff;
-  border: none;
-  border-radius: 50%;
-  -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
-          box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
-  -webkit-transform: translate(10px, -10px);
-          transform: translate(10px, -10px);
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.close-button:focus-within {
-  outline: none;
-  border: none;
-  color: #2196f3;
-}
-
-.rules {
-  color: #2196f3;
-  border-bottom: #2196f3;
-}
-
-.agree {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: #757575;
-  margin-bottom: 30px;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  /* Анимация чекбокса */
-}
-
-.agree:focus-within .icon-check {
-  left: -1px;
-  bottom: -1px;
-  opacity: 1;
-  -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  -webkit-transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button-list {
