--- a/SASS/components/mobil-version/_mobil-menu.scss
+++ b/SASS/components/mobil-version/_mobil-menu.scss
@@ -1,6 +1,6 @@
 .menu-button {
   display: inline-flex;
-  margin: 0;
+  // margin-left: 100px;
   padding: 0;
   border: none;
   background-color: transparent;
