--- a/SASS/components/_logo.scss
+++ b/SASS/components/_logo.scss
@@ -2,9 +2,9 @@
   display: inline-flex;
   padding-top: 24px;
   padding-bottom: 25px;
-  margin-right: 60px;
+  // margin-right: 60px;
   @media screen and (max-width: 767px) {
-    margin-right: 85px;
+    margin-right: auto;
   }
   @media screen and (min-width: 1200px) {
     margin-right: 85px;
