--- a/SASS/components/_backdrop.scss
+++ b/SASS/components/_backdrop.scss
@@ -1,8 +1,6 @@
 .backdrop .is-hidden {
-  // display: none;
   opacity: 0;
   pointer-events: none;
-  transform: scale(1.08);
 }
 .backdrop {
   position: fixed;
@@ -12,8 +10,8 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   @media screen and (max-width: 767px) {
     padding: 15px;
     overflow-y: scroll;
