--- a/SASS/components/mobil-version/_header-mobile.scss
+++ b/SASS/components/mobil-version/_header-mobile.scss
@@ -22,10 +22,13 @@
 
 // нав контейнер
 .nav-container {
-  @media screen and (max-width: 767px) {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-grow: 1;
+  @media screen and (max-width: 768px) {
     width: 100%;
-    display: flex;
-    justify-content: space-between;
+
     align-items: center;
     flex-grow: 1;
   }
@@ -45,45 +48,51 @@
   display: flex;
   justify-content: center;
   align-items: center;
-}
-.site-nav {
-  // display: inline;
 
-  align-items: center;
-  justify-content: center;
-  margin: 0;
-}
-// Адресс-нав______
-.adress-nav {
-  @media screen and (min-width: 768px) {
-    display: flex;
-    flex-direction: column;
-    padding: 30px 0px;
-  }
-  @media screen and (max-width: 1199px) {
-    display: flex;
-    flex-direction: column;
-    padding: 30px 0px;
+  @media screen and (max-width: 767px) {
+    display: inline;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
   }
 }
+// Адресс-нав
 
 .adress-nav a {
+  display: block;
+  font-style: normal;
+  font-weight: 500;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.02em;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   color: $grey-text-color;
-  @media screen and (min-width: 768px) {
-    text-align: start;
-  }
+  justify-content: center;
+}
+.adress-nav {
+  display: inline;
+  padding-bottom: 10px;
   @media screen and (min-width: 1200px) {
-    margin-top: 30px;
+    padding-bottom: 0px;
+    display: flex;
+    align-items: center;
   }
-
-  & :hover,
-  & :focus {
-    color: $accent-blue-color;
+  @media screen and (max-width: 767px) {
+    display: block;
   }
 }
+// @media screen and (min-width: 768px) {
+//   text-align: start;
+// }
+// @media screen and (min-width: 1200px) {
+//   margin-top: 30px;
+// }
+
+.adress-nav a:hover,
+.adress-nav a:focus {
+  color: $accent-blue-color;
+}
+
 .adress-nav li {
   @media screen and (min-width: 768px) {
     text-align: center;
@@ -160,10 +169,11 @@
   display: inline;
   @media screen and (min-width: 768px) {
     text-align: start;
+    margin-top: 10px;
   }
   @media screen and (min-width: 1200px) {
     display: block;
-    margin-top: 30px;
+
     margin-top: auto;
     margin-bottom: auto;
     margin-right: 15px;
